--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "PZRNWechat",
+  "name": "pz-rn-wechat",
   "title": "React Native Wechat",
   "version": "1.2.4",
   "nativePackage": true,
